--- a/Estadia KED/Estadia KED/Estadia KED.csproj
+++ b/Estadia KED/Estadia KED/Estadia KED.csproj
@@ -54,14 +54,26 @@
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\main.css" />
     <Content Include="img\azure.jpg" />
+    <Content Include="img\azure.png" />
+    <Content Include="img\Card Payment_48px.png" />
+    <Content Include="img\Credit Card_48px.png" />
+    <Content Include="img\Debit Card_48px.png" />
     <Content Include="img\excel.jpg" />
+    <Content Include="img\ked.png" />
     <Content Include="img\log.png" />
+    <Content Include="img\MasterCard_48px.png" />
+    <Content Include="img\paypal.png" />
+    <Content Include="img\PayPal_48px.png" />
+    <Content Include="img\Visa_48px.png" />
+    <Content Include="img\windows server.png" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery.js" />
     <Content Include="js\main.js" />
+    <Content Include="view\carrito.aspx" />
     <Content Include="view\index.aspx" />
     <Content Include="view\login.aspx" />
+    <Content Include="view\pago.aspx" />
     <Content Include="view\registro.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -77,6 +89,12 @@
     <Compile Include="control\Conexion.cs" />
     <Compile Include="model\Principal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="view\carrito.aspx.cs">
+      <DependentUpon>carrito.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="view\carrito.aspx.designer.cs">
+      <DependentUpon>carrito.aspx</DependentUpon>
+    </Compile>
     <Compile Include="view\index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -90,6 +108,12 @@
     </Compile>
     <Compile Include="view\login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="view\pago.aspx.cs">
+      <DependentUpon>pago.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="view\pago.aspx.designer.cs">
+      <DependentUpon>pago.aspx</DependentUpon>
     </Compile>
     <Compile Include="view\registro.aspx.cs">
       <DependentUpon>registro.aspx</DependentUpon>
