--- a/Estadia KED/Estadia KED/Estadia KED.csproj
+++ b/Estadia KED/Estadia KED/Estadia KED.csproj
@@ -53,13 +53,17 @@
     <Content Include="css\bootstrap.css" />
     <Content Include="css\bootstrap.min.css" />
     <Content Include="css\main.css" />
+    <Content Include="css\slide.css" />
     <Content Include="img\azure.jpg" />
     <Content Include="img\azure.png" />
     <Content Include="img\Card Payment_48px.png" />
+    <Content Include="img\carrito.png" />
     <Content Include="img\Credit Card_48px.png" />
     <Content Include="img\Debit Card_48px.png" />
     <Content Include="img\excel.jpg" />
     <Content Include="img\ked.png" />
+    <Content Include="img\kedST.png" />
+    <Content Include="img\kedX.png" />
     <Content Include="img\log.png" />
     <Content Include="img\MasterCard_48px.png" />
     <Content Include="img\paypal.png" />
@@ -71,11 +75,15 @@
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\jquery.js" />
     <Content Include="js\main.js" />
+    <Content Include="view\AgregarCurso.aspx" />
     <Content Include="view\carrito.aspx" />
+    <Content Include="view\Cursos.aspx" />
     <Content Include="view\index.aspx" />
     <Content Include="view\login.aspx" />
+    <Content Include="view\MisCursos.aspx" />
     <Content Include="view\pago.aspx" />
     <Content Include="view\registro.aspx" />
+    <Content Include="view\VerCurso.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -91,12 +99,26 @@
     <Compile Include="control\Conexion.cs" />
     <Compile Include="model\Principal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="view\AgregarCurso.aspx.cs">
+      <DependentUpon>AgregarCurso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="view\AgregarCurso.aspx.designer.cs">
+      <DependentUpon>AgregarCurso.aspx</DependentUpon>
+    </Compile>
     <Compile Include="view\carrito.aspx.cs">
       <DependentUpon>carrito.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="view\carrito.aspx.designer.cs">
       <DependentUpon>carrito.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="view\Cursos.aspx.cs">
+      <DependentUpon>Cursos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="view\Cursos.aspx.designer.cs">
+      <DependentUpon>Cursos.aspx</DependentUpon>
     </Compile>
     <Compile Include="view\index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
@@ -112,6 +134,13 @@
     <Compile Include="view\login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="view\MisCursos.aspx.cs">
+      <DependentUpon>MisCursos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="view\MisCursos.aspx.designer.cs">
+      <DependentUpon>MisCursos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="view\pago.aspx.cs">
       <DependentUpon>pago.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -125,6 +154,13 @@
     </Compile>
     <Compile Include="view\registro.aspx.designer.cs">
       <DependentUpon>registro.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="view\VerCurso.aspx.cs">
+      <DependentUpon>VerCurso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="view\VerCurso.aspx.designer.cs">
+      <DependentUpon>VerCurso.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
