--- a/Estadia KED/Estadia KED/Estadia KED.csproj
+++ b/Estadia KED/Estadia KED/Estadia KED.csproj
@@ -78,6 +78,7 @@
     <Content Include="view\AgregarCurso.aspx" />
     <Content Include="view\carrito.aspx" />
     <Content Include="view\Cursos.aspx" />
+    <Content Include="view\detalleCurso.aspx" />
     <Content Include="view\index.aspx" />
     <Content Include="view\login.aspx" />
     <Content Include="view\MisCursos.aspx" />
@@ -119,6 +120,13 @@
     </Compile>
     <Compile Include="view\Cursos.aspx.designer.cs">
       <DependentUpon>Cursos.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="view\detalleCurso.aspx.cs">
+      <DependentUpon>detalleCurso.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="view\detalleCurso.aspx.designer.cs">
+      <DependentUpon>detalleCurso.aspx</DependentUpon>
     </Compile>
     <Compile Include="view\index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
